--- a/publications/publications.bib
+++ b/publications/publications.bib
@@ -141,25 +141,25 @@ Section: Research Article},
 	issn = {1931-3128},
 	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7221383/},
 	doi = {10.1016/j.chom.2020.05.007},
-	abstract = {Dysregulation of inflammation is hypothesized to play a crucial role in the severe complications of COVID-19, with the IL-1/IL-6 pathway being central. Here, we report on the treatment of eight severe COVID-19 pneumonia patients—seven hospitalized in intensive care units (ICUs) in Greece and one non-ICU patient in the Netherlands—with the interleukin-1 receptor antagonist Anakinra. All patients scored positive for the hemophagocytosis score (HScore) and were diagnosed with secondary hemophagocytic lymphohistocytosis (sHLH) characterized by pancytopenia, hyper-coagulation, acute kidney injury, and hepatobiliary dysfunction. At the end of treatment, ICU patients had less need for vasopressors, significantly improved respiratory function, and lower HScore. Although three patients died, the mortality was lower than historical series of patients with sHLH in sepsis. These data suggest that administration of Anakinra may be beneficial for treating severe COVID-19 patients with sHLH as determined by the HScore, and they support the need for larger clinical studies to validate this concept., 
-          
-            
+	abstract = {Dysregulation of inflammation is hypothesized to play a crucial role in the severe complications of COVID-19, with the IL-1/IL-6 pathway being central. Here, we report on the treatment of eight severe COVID-19 pneumonia patients—seven hospitalized in intensive care units (ICUs) in Greece and one non-ICU patient in the Netherlands—with the interleukin-1 receptor antagonist Anakinra. All patients scored positive for the hemophagocytosis score (HScore) and were diagnosed with secondary hemophagocytic lymphohistocytosis (sHLH) characterized by pancytopenia, hyper-coagulation, acute kidney injury, and hepatobiliary dysfunction. At the end of treatment, ICU patients had less need for vasopressors, significantly improved respiratory function, and lower HScore. Although three patients died, the mortality was lower than historical series of patients with sHLH in sepsis. These data suggest that administration of Anakinra may be beneficial for treating severe COVID-19 patients with sHLH as determined by the HScore, and they support the need for larger clinical studies to validate this concept.,
+
+
               •
               Anakinra treatment was administered to eight severe COVID-19 patients
-            
-            
+
+
               •
               All patients had secondary hemophagocytic lymphohistiocytosis
-            
-            
+
+
               •
               Respiratory function was improved at the end of treatment
-            
-            
+
+
               •
               In one patient, the need for mechanical ventilation was prevented
-            
-          
+
+
         , Complex immune dysregulation in severe COVID-19 suggests the use of immunomodulation therapies. Dimopoulos et al. describe eight cases of COVID-19 patients who all had secondary hemophagocytic lymphohistiocytosis and showed favorable responses in respiratory function upon treatment with the interleukin-1 receptor antagonist Anakinra.},
 	number = {1},
 	urldate = {2021-03-10},
@@ -304,20 +304,20 @@ These group testing schemes could lead to a major reduction in the number of tes
 	doi = {10.1016/j.seizure.2020.10.005},
 	abstract = {•
               TeleNP represents a medium through which clinical research and important clinical care can continue.
-            
-            
+
+
               •
               We discuss benefits, challenges, and practical considerations in the use of teleNP.
-            
-            
+
+
               •
               We describe how the Australian Epilepsy Project has adapted to the COVID-19 environment.
-            
-            
+
+
               •
               TeleNP data acquired to date reveals deficits typical of those observed in epilepsy.
-            
-            
+
+
               •
               TeleNP presents an opportunity to expand the reach and breadth of neuropsychological services.},
 	urldate = {2021-03-10},
@@ -401,21 +401,21 @@ Die Ergebnisse geben einen Einblick in die heterogenen Auswirkungen der Pandemie
 	issn = {2666-3791},
 	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7762774/},
 	doi = {10.1016/j.xcrm.2020.100146},
-	abstract = {Hydroxychloroquine is being investigated for a potential prophylactic effect in severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2) infection, but its mechanism of action is poorly understood. Circulating leukocytes from the blood of coronavirus disease 2019 (COVID-19) patients show increased responses to Toll-like receptor ligands, suggestive of trained immunity. By analyzing interferon responses of peripheral blood mononuclear cells from healthy donors conditioned with heat-killed Candida, trained innate immunity can be modeled in vitro. In this model, hydroxychloroquine inhibits the responsiveness of these innate immune cells to virus-like stimuli and interferons. This is associated with a suppression of histone 3 lysine 27 acetylation and histone 3 lysine 4 trimethylation of inflammation-related genes, changes in the cellular lipidome, and decreased expression of interferon-stimulated genes. Our findings indicate that hydroxychloroquine inhibits trained immunity in vitro, which may not be beneficial for the antiviral innate immune response to SARS-CoV-2 infection in patients., 
-          
-            
+	abstract = {Hydroxychloroquine is being investigated for a potential prophylactic effect in severe acute respiratory syndrome coronavirus 2 (SARS-CoV-2) infection, but its mechanism of action is poorly understood. Circulating leukocytes from the blood of coronavirus disease 2019 (COVID-19) patients show increased responses to Toll-like receptor ligands, suggestive of trained immunity. By analyzing interferon responses of peripheral blood mononuclear cells from healthy donors conditioned with heat-killed Candida, trained innate immunity can be modeled in vitro. In this model, hydroxychloroquine inhibits the responsiveness of these innate immune cells to virus-like stimuli and interferons. This is associated with a suppression of histone 3 lysine 27 acetylation and histone 3 lysine 4 trimethylation of inflammation-related genes, changes in the cellular lipidome, and decreased expression of interferon-stimulated genes. Our findings indicate that hydroxychloroquine inhibits trained immunity in vitro, which may not be beneficial for the antiviral innate immune response to SARS-CoV-2 infection in patients.,
+
+
               PBMCs of COVID-19 patients show increased responses to Toll-like receptor ligands
-            
-            
+
+
               Trained immunity is modeled in vitro using Candida-trained PBMCs
-            
-            
+
+
               Hydroxychloroquine inhibits changes in lipidome and histone modifications
-            
-            
+
+
               Hydroxychloroquine dampens the trained response to interferons and viral stimuli
-            
-          
+
+
         , Peripheral blood mononuclear cells (PBMCs) of COVID-19 patients show increased responses to Toll-like receptor ligands, suggestive of innate immune reprogramming. Rother et al. show that hydroxychloroquine inhibits the interferon response of Candida-trained PBMCs from healthy donors in vitro and blocks associated changes in lipidome and histone modifications.},
 	number = {9},
 	urldate = {2021-03-09},
@@ -787,12 +787,12 @@ Given the low sensitivity, we recommend not to rely on an antibody-based rapid t
 	doi = {10.1016/j.ijheh.2020.113653},
 	abstract = {•
               Incidence of SARS-CoV-2 infections are higher in employees of a hospital environment compared to the general population.
-            
-            
+
+
               •
               Low-threshold testing facility helps to identify SARS-CoV-2 positive employees with absent or mild clinical symptoms.
-            
-            
+
+
               •
               Tracking of risk contacts by the hospital hygiene prevent distribution of SARS-CoV-2 infection.},
 	urldate = {2021-03-04},
@@ -2306,20 +2306,20 @@ Publisher: Nature Publishing Group},
 	doi = {10.1016/j.jcv.2020.104381},
 	abstract = {•
               A laboratory-based surveillance tool for SARS-CoV-2 was established.
-            
-            
+
+
               •
               It consists of minipool testing of nucleic acid preparations.
-            
-            
+
+
               •
               Limit of detection was 48 copies per reaction (95 \% confidence interval: 33–184).
-            
-            
+
+
               •
               A protocol was distributed among five German university hospitals.
-            
-            
+
+
               •
               The approach proved its principle and one COVID-19 case was detected in 70 minipools.},
 	urldate = {2021-03-26},
@@ -2357,13 +2357,13 @@ Publisher: Nature Publishing Group},
 	doi = {10.1055/a-1164-9696},
 	abstract = {Hintergrund
  Von der chronischen Rhinosinusitis (CRS) sind weltweit etwa 5–12 \% der Allgemeinbevölkerung betroffen. Die CRS gilt als chronische Atemwegserkrankung, die nach den Empfehlungen der WHO ein Risikofaktor für COVID-19-Patienten sein kann. Die entzündlichen Veränderungen der Nasenschleimhäute bei chronischer Rhinosinusitis mit Nasenpolypen (CRSwNP) sind in den meisten Fällen vom Entzündungsendotyp 2 (T2).
-, 
+,
 Methoden
  Der aktuelle Wissensstand sowohl zu COVID-19 als auch zu den Behandlungsmöglichkeiten von CRSwNP wurde durch eine Literaturrecherche in Medline, Pubmed, internationalen Leitlinien, der Cochrane Library und im Internet analysiert.
-, 
+,
 Ergebnisse
  Auf Grundlage der internationalen Literatur, der aktuellen Empfehlungen der WHO und anderer internationaler Organisationen sowie der bisherigen Erfahrungen gab ein Expertengremium von EAACI und ARIA Empfehlungen für die Behandlung von CRSwNP während der COVID-19-Pandemien.
-, 
+,
 Schlussfolgerung
  Intranasale Kortikosteroide stellen die Standardbehandlung für CRS bei Patienten mit einer SARS-CoV-2-Infektion dar. Chirurgische Behandlungen sollten auf ein Minimum reduziert werden und nur bei Patienten mit lokalen Komplikationen und solchen, für die keine anderen Behandlungsmöglichkeiten bestehen, durchgeführt werden. Systemische Kortikosteroide sollten bei COVID-19-Patienten vermieden werden. Die Behandlung mit Biologika kann bei nicht infizierten Patienten unter sorgfältiger Überwachung fortgesetzt werden und sollte während einer SARS-CoV-2-Infektion vorübergehend unterbrochen werden.},
 	number = {6},
@@ -2587,16 +2587,16 @@ To our knowledge, this is the first Germany-wide survey among the heads of ortho
 	doi = {10.1016/j.jshs.2020.07.010},
 	abstract = {•
               Predictive genetic testing of an asymptomatic person has considerable potential to predict future risk of coronavirus disease-2019 (COVID-19) severity.
-            
-            
+
+
               •
               Risk alleles for COVID-19 severity due to the pleiotropic effects are associated with performance-related traits.
-            
-            
+
+
               •
               Team sport, power, and combat athletes possess a higher genetic risk for COVID-19 severity than untrained subjects or endurance athletes.
-            
-            
+
+
               •
               Polygenic risk scores based on 6 gene polymorphisms show a significant geographical variation, putting some countries at greater risk than others.},
 	number = {5},
@@ -2620,16 +2620,16 @@ To our knowledge, this is the first Germany-wide survey among the heads of ortho
 	doi = {10.1016/j.yebeh.2020.107298},
 	abstract = {•
               A structured audit on telemedical counseling was performed in 239 patients with epilepsy.
-            
-            
+
+
               •
               Telemedicine was appreciated by {\textgreater} 80\% of the participants.
-            
-            
+
+
               •
               Quality of telemedicine was rated equal to onsite appointments.
-            
-            
+
+
               •
               Telemedicine is welcomed as an add-on service rather than a substitute to appointments onsite.},
 	urldate = {2021-03-24},
@@ -3598,25 +3598,25 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	issn = {0092-8674},
 	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7405822/},
 	doi = {10.1016/j.cell.2020.08.001},
-	abstract = {Coronavirus disease 2019 (COVID-19) is a mild to moderate respiratory tract infection, however, a subset of patients progress to severe disease and respiratory failure. The mechanism of protective immunity in mild forms and the pathogenesis of severe COVID-19 associated with increased neutrophil counts and dysregulated immune responses remain unclear. In a dual-center, two-cohort study, we combined single-cell RNA-sequencing and single-cell proteomics of whole-blood and peripheral-blood mononuclear cells to determine changes in immune cell composition and activation in mild versus severe COVID-19 (242 samples from 109 individuals) over time. HLA-DRhiCD11chi inflammatory monocytes with an interferon-stimulated gene signature were elevated in mild COVID-19. Severe COVID-19 was marked by occurrence of neutrophil precursors, as evidence of emergency myelopoiesis, dysfunctional mature neutrophils, and HLA-DRlo monocytes. Our study provides detailed insights into the systemic immune response to SARS-CoV-2 infection and reveals profound alterations in the myeloid cell compartment associated with severe COVID-19., 
-          
-            
+	abstract = {Coronavirus disease 2019 (COVID-19) is a mild to moderate respiratory tract infection, however, a subset of patients progress to severe disease and respiratory failure. The mechanism of protective immunity in mild forms and the pathogenesis of severe COVID-19 associated with increased neutrophil counts and dysregulated immune responses remain unclear. In a dual-center, two-cohort study, we combined single-cell RNA-sequencing and single-cell proteomics of whole-blood and peripheral-blood mononuclear cells to determine changes in immune cell composition and activation in mild versus severe COVID-19 (242 samples from 109 individuals) over time. HLA-DRhiCD11chi inflammatory monocytes with an interferon-stimulated gene signature were elevated in mild COVID-19. Severe COVID-19 was marked by occurrence of neutrophil precursors, as evidence of emergency myelopoiesis, dysfunctional mature neutrophils, and HLA-DRlo monocytes. Our study provides detailed insights into the systemic immune response to SARS-CoV-2 infection and reveals profound alterations in the myeloid cell compartment associated with severe COVID-19.,
+
+
               •
               SARS-CoV-2 infection induces profound alterations of the myeloid compartment
-            
-            
+
+
               •
               Mild COVID-19 is marked by inflammatory HLA-DRhiCD11chi CD14+ monocytes
-            
-            
+
+
               •
               Dysfunctional HLA-DRloCD163hi and HLA-DRloS100Ahi CD14+ monocytes in severe COVID-19
-            
-            
+
+
               •
               Emergency myelopoiesis with immature and dysfunctional neutrophils in severe COVID-19
-            
-          
+
+
         , Analysis of patients with mild and severe COVID-19 reveals the presence of dysfunctional neutrophils in the latter that is linked to emergency myelopoiesis.},
 	number = {6},
 	urldate = {2021-03-10},
@@ -4649,25 +4649,25 @@ The decision as to whether to separate areas and teams seemed to depend on the h
 	shorttitle = {Development and validation of {SCOPE} score},
 	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8872836/},
 	doi = {10.1016/j.xcrm.2022.100560},
-	abstract = {Most patients infected with SARS-CoV-2 (COVID-19) experience mild, non-specific symptoms, but many develop severe symptoms associated with an excessive inflammatory response. Elevated plasma concentrations of soluble urokinase plasminogen activator receptor (suPAR) provide early warning of progression to severe respiratory failure (SRF) or death, but access to suPAR testing may be limited. The Severe COvid Prediction Estimate (SCOPE) score, derived from circulating concentrations of C-reactive protein, D- dimers, interleukin-6, and ferritin among patients not receiving non-invasive or invasive mechanical ventilation during the SAVE-MORE study, offers predictive accuracy for progression to SRF or death within 14 days comparable to that of a suPAR concentration of ≥6 ng/mL (area under receiver operator characteristic curve 0.81 for both). The SCOPE score is validated in two similar independent cohorts. A SCOPE score of 6 or more is an alternative to suPAR for predicting progression to SRF or death within 14 days of hospital admission for pneumonia, and it can be used to guide treatment decisions., 
-          
-            
+	abstract = {Most patients infected with SARS-CoV-2 (COVID-19) experience mild, non-specific symptoms, but many develop severe symptoms associated with an excessive inflammatory response. Elevated plasma concentrations of soluble urokinase plasminogen activator receptor (suPAR) provide early warning of progression to severe respiratory failure (SRF) or death, but access to suPAR testing may be limited. The Severe COvid Prediction Estimate (SCOPE) score, derived from circulating concentrations of C-reactive protein, D- dimers, interleukin-6, and ferritin among patients not receiving non-invasive or invasive mechanical ventilation during the SAVE-MORE study, offers predictive accuracy for progression to SRF or death within 14 days comparable to that of a suPAR concentration of ≥6 ng/mL (area under receiver operator characteristic curve 0.81 for both). The SCOPE score is validated in two similar independent cohorts. A SCOPE score of 6 or more is an alternative to suPAR for predicting progression to SRF or death within 14 days of hospital admission for pneumonia, and it can be used to guide treatment decisions.,
+
+
               •
               SCOPE score is composed of C-reactive protein, D dimers, ferritin, and interleukin-6
-            
-            
+
+
               •
               Values of 6 or more predict 6-fold risk for severe respiratory failure or death
-            
-            
+
+
               •
               SCOPE score predicts risk for severe respiratory failure or death comparable to suPAR
-            
-            
+
+
               •
               Anakinra treatment when SCOPE is 6 or more provides lower odds of poor outcome
-            
-          
+
+
         , Giamarellos-Bourboulis et al. introduce the SCOPE score for early prognostication of the risk for severe respiratory failure or death within the next 14 days in COVID-19 pneumonia. This is composed of C-reactive protein, D dimers, ferritin, and interleukin-6 concentrations. Anakinra treatment administered when SCOPE is 6 or more provides lower odds of a poor outcome.},
 	number = {3},
 	urldate = {2022-05-28},
@@ -5295,7 +5295,7 @@ Publisher: Nature Publishing Group},
 	file = {Adjobimey et al. - 2022 - Comparison of IgA, IgG, and Neutralizing Antibody .pdf:files/2435/Adjobimey et al. - 2022 - Comparison of IgA, IgG, and Neutralizing Antibody .pdf:application/pdf},
 }
 
-@article{noauthor_attenuation_2022,
+@article{bergant_attenuation_2022,
 	title = {Attenuation of {SARS}-{CoV}-2 replication and associated inflammation by concomitant targeting of viral and host cap 2'-{O}-ribose methyltransferases},
 	volume = {n/a},
 	issn = {0261-4189},
@@ -5305,6 +5305,7 @@ Publisher: Nature Publishing Group},
 	number = {n/a},
 	urldate = {2022-08-19},
 	journal = {The EMBO Journal},
+	author = {Bergant, Valter and Yamada, Shintaro and Grass, Vincent and Tsukamoto, Yuta and Lavacca, Teresa and Krey, Karsten and Mühlhofer, Maria-Teresa and Wittmann, Sabine and     Ensser, Armin and Herrmann, Alexandra and vom Hemdt, Anja and Tomita, Yuriko and Matsuyama, Shutoku and Hirokawa, Takatsugu and Huang, Yiqi and Piras, Antonio and Jakwerth,         Constanze A and Oelsner, Madlen and Thieme, Susanne and Graf, Alexander and Krebs, Stefan and Blum, Helmut and Kümmerer, Beate M and Stukalov, Alexey and Schmidt-Weber, Carsten B   and Igarashi, Manabu and Gramberg, Thomas and Pichlmair, Andreas and Kato, Hiroki},
 	month = jul,
 	year = {2022},
 	note = {Publisher: John Wiley \& Sons, Ltd},
@@ -5320,7 +5321,7 @@ Publisher: Nature Publishing Group},
 	shorttitle = {Recommendation of the {German} {Society} of {Hospital} {Hygiene} ({DGKH})},
 	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9285112/},
 	doi = {10.3205/dgkh000416},
-	abstract = {The German Society of Hospital Hygiene develops guidelines, recommendations and standard operation procedures on a voluntary basis, published on the DGKH-website (https://www.krankenhaushygiene.de/)., The original German version of this recommendation was published in April 2022 and has now been made available to the international professional public in English. Evaluating the current data on the efficacy of virucidal gargle/mouthwash solutions and nasal sprays against SARS-CoV-2 in vitro and in clinical trials, conducted with preventive or therapeutic objectives, recommendations are given for the prevention of COVID-19. The following areas are considered: , 
+	abstract = {The German Society of Hospital Hygiene develops guidelines, recommendations and standard operation procedures on a voluntary basis, published on the DGKH-website (https://www.krankenhaushygiene.de/)., The original German version of this recommendation was published in April 2022 and has now been made available to the international professional public in English. Evaluating the current data on the efficacy of virucidal gargle/mouthwash solutions and nasal sprays against SARS-CoV-2 in vitro and in clinical trials, conducted with preventive or therapeutic objectives, recommendations are given for the prevention of COVID-19. The following areas are considered: ,
 Protection of the community when regional clusters or high incidences of infection become knownProtection of the community at low risk of infectionPre-exposure prophylaxis for the protection of healthcare workersPost-exposure prophylaxis},
 	urldate = {2022-08-19},
 	journal = {GMS Hyg Infect Control},
@@ -5432,7 +5433,7 @@ In this prospective, longitudinal study, 120 patients with GI cancer, including 
 
 View this table:
 
-Table 1 
+Table 1
 Patientbaseline characteristics
 
 
@@ -5568,7 +5569,7 @@ Structural and patient-related factors, including age, comorbidities and ECMO ca
 
 
             Trial registration
-          
+
 Registered in the German Clinical Trials Register (study ID: DRKS00022964, retrospectively registered, September 7th 2020, https://www.drks.de/drks\_web/navigate.do?navigationId=trial.HTML\&TRIAL\_ID=DRKS00022964.
 
 Graphical abstract
