--- a/publications/publications.bib
+++ b/publications/publications.bib
@@ -4246,7 +4246,7 @@ Publisher: Nature Publishing Group},
 	number = {11},
 	urldate = {2022-05-30},
 	journal = {JAMA Neurology},
-	author = {Sánchez van Kammen, Mayte and Aguiar de Sousa, Diana and Poli, Sven and Cordonnier, Charlotte and Heldner, Mirjam R. and van de Munckhof, Anita and Krzywicka, Katarzyna and van Haaps, Thijs and Ciccone, Alfonso and Middeldorp, Saskia and Levi, Marcel M. and Kremer Hovinga, Johanna A. and Silvis, Suzanne and Hiltunen, Sini and Mansour, Maryam and Arauz, Antonio and Barboza, Miguel A. and Field, Thalia S. and Tsivgoulis, Georgios and Nagel, Simon and Lindgren, Erik and Tatlisumak, Turgut and Jood, Katarina and Putaala, Jukka and Ferro, Jose M. and Arnold, Marcel and Coutinho, Jonathan M. and {Cerebral Venous Sinus Thrombosis With Thrombocytopenia Syndrome Study Group}},
+	author = {Sánchez van Kammen, Mayte and Aguiar de Sousa, Diana and Poli, Sven and Cordonnier, Charlotte and Heldner, Mirjam R. and van de Munckhof, Anita and Krzywicka, Katarzyna and van Haaps, Thijs and Ciccone, Alfonso and Middeldorp, Saskia and Levi, Marcel M. and Kremer Hovinga, Johanna A. and Silvis, Suzanne and Hiltunen, Sini and Mansour, Maryam and Arauz, Antonio and Barboza, Miguel A. and Field, Thalia S. and Tsivgoulis, Georgios and Nagel, Simon and Lindgren, Erik and Tatlisumak, Turgut and Jood, Katarina and Putaala, Jukka and Ferro, Jose M. and Arnold, Marcel and Coutinho, Jonathan M. and Cerebral Venous Sinus Thrombosis With Thrombocytopenia Syndrome Study Group},
 	month = nov,
 	year = {2021},
 	pages = {1314--1323},
